Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/Child_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the Child Product info for Static Bundle, created as per BIZ-47580</description>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lookup Data (Child Product)</relationshipLabel>
    <relationshipName>Lookup_Data</relationshipName>
    <type>Lookup</type>
</CustomField>