Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/Child_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Code__c</fullName>
    <description>To capture child product code, used in Static Bundle configuration</description>
    <formula>Child_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Product Code</label>
    <type>Text</type>
</CustomField>