Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/Dimension_Id__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Id__c</fullName>
    <label>Dimension Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>