Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <description>Stores the markup for the products, created as per BIZ-45120</description>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>