Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/PriceBookEntry_Id__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_Id__c</fullName>
    <label>PriceBookEntry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>