Doc/force-app/main/default/objects/SBQQ__LookupData__c/fields/Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Segment Key</label>
    <type>AutoNumber</type>
</CustomField>