Doc/force-app/main/default/objects/SBQQ__LookupData__c/recordTypes/ACV.recordType-meta.xml
<RecordType>
    <fullName>ACV</fullName>
    <active>true</active>
    <description>For creating ACV records - BIZ-67807</description>
    <label>ACV</label>
</RecordType>