Doc/force-app/main/default/objects/SBQQ__LookupData__c/recordTypes/Static_Bundle.recordType-meta.xml
<RecordType>
    <fullName>Static_Bundle</fullName>
    <active>true</active>
    <description>Capture Parent Child Static bundle relationship</description>
    <label>Static Bundle</label>
</RecordType>