Doc/force-app/main/default/objects/SBQQ__LookupData__c/listViews/ACV.listView-meta.xml
<ListView>
    <fullName>ACV</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Category__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>ACV_Type__c</columns>
    <columns>Inherited_ACV_Type__c</columns>
    <columns>NS_Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Category__c</field>
        <operation>equals</operation>
        <value>ACV</value>
    </filters>
    <label>ACV</label>
</ListView>