Doc/force-app/main/default/objects/SBQQ__LookupData__c/listViews/Premium_Support_Products.listView-meta.xml
<ListView>
    <fullName>Premium_Support_Products</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>SBQQ__Category__c</columns>
    <columns>Markup__c</columns>
    <columns>Meter_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Category__c</field>
        <operation>equals</operation>
        <value>Premium</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>DC-02013</value>
    </filters>
    <label>Premium Support Products</label>
</ListView>