Doc/force-app/main/default/objects/SBQQ__LookupData__c/listViews/Restricted_Country.listView-meta.xml
<ListView>
    <fullName>Restricted_Country</fullName>
    <booleanFilter>1 OR 2 Or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>SBQQ__Message__c</columns>
    <columns>SBQQ__Category__c</columns>
    <columns>SBQQ__Value__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SBQQ__Value__c</field>
        <operation>equals</operation>
        <value>Red</value>
    </filters>
    <filters>
        <field>SBQQ__Value__c</field>
        <operation>equals</operation>
        <value>Yellow</value>
    </filters>
    <filters>
        <field>SBQQ__Value__c</field>
        <operation>equals</operation>
        <value>Yellow-Green</value>
    </filters>
    <label>Restricted Country</label>
</ListView>