Doc/force-app/main/default/objects/SBQQ__LookupData__c/listViews/SFA.listView-meta.xml
<ListView>
    <fullName>SFA</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>SFA_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFA_Type__c</field>
        <operation>equals</operation>
        <value>CPI,RPI,Default</value>
    </filters>
    <label>SFA</label>
</ListView>