Doc/force-app/main/default/objects/SBQQ__LookupData__c/listViews/Static_Bundle.listView-meta.xml
<ListView>
    <fullName>Static_Bundle</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>Child_Product__c</columns>
    <columns>Product_Allocation__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Dimension_Id__c</columns>
    <columns>PriceBookEntry_Id__c</columns>
    <columns>Child_Product_Code__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SBQQ__LookupData__c.Static_Bundle</value>
    </filters>
    <filters>
        <field>Child_Product__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>Static Bundle</label>
    <language>en_US</language>
</ListView>